--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -22,6 +22,18 @@
 .logo {
   max-width: 40px;
   min-height: 40px;
+  transition-duration: 0.5s;
+}
+.logo:hover {
+  cursor: pointer;
+  transform: scale(1.1, 1.1);
+  transition-duration: 1s;
+}
+.product-button:hover a {
+  cursor: pointer;
+  color: #000;
+  transform: scale(1.1, 1.1);
+  transition-duration: 0.5s;
 }
 .nav-right-items {
   display: flex;
@@ -40,6 +52,7 @@
   padding: 8px;
   font-weight: 800;
   font-size: 20px;
+  transition-duration: 0.5s;
 }
 .product-button img {
   border-style: none;
