--- a/client/src/screens/OurstoryPage/styles.css
+++ b/client/src/screens/OurstoryPage/styles.css
@@ -1,18 +1,136 @@
 .main-ourstorypage-container {
   display: flex;
   flex-direction: column;
-  background-color: burlywood;
-}
-.main-ourstorypage-container .item-container {
-  background-color: cadetblue;
 }
 .main-ourstorypage-container .ourstory-header {
+  position: relative;
   height: 100vh;
-  background-color: chartreuse;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
 }
+.ourstory-header img {
+  width: 100%;
+  height: 100%;
+}
+.ourstory-header .text-header {
+  color: #fff;
+  position: absolute;
+  font-size: 180px;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  transform: translate(-50%, -50%);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ourstory-header .text-desc {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  color: #fff;
+}
+.ourstory-header .text-desc :nth-child(1) {
+  margin-bottom: 10px;
+}
+.main-ourstorypage-container .item-container {
+}
+
 .main-ourstorypage-container .ourstory-1 {
-  height: 100vh;
-  background-color: chocolate;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 0px;
+}
+.main-ourstorypage-container .ourstory-1 > p {
+  font-size: 25px;
+  color: #4e4e4e;
+  align-self: center;
+  width: 60%;
+  padding-bottom: 50px;
+}
+.main-ourstorypage-container .ourstory-1 .content-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.content-text-container.\.reverse {
+  margin-left: 10% !important;
+}
+.main-ourstorypage-container .ourstory-1 .content-container img {
+  width: 50%;
+  height: auto;
+  /* padding-right: 20px; */
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container {
+  width: 50%;
+  height: auto;
+  /* padding-left: 100px; */
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  > div {
+  margin-bottom: 40px;
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  > p {
+  margin: 20px 0px;
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  .number-toppic {
+  background-color: #a2a97f;
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  .number-toppic
+  > p {
+  font-family: ComicSansMS;
+  font-size: 100px;
+  color: #fff;
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  :nth-child(2) {
+  font-size: 60px;
+  color: #4e4e4e;
+}
+.main-ourstorypage-container
+  .ourstory-1
+  .content-container
+  .content-text-container
+  :nth-child(3) {
+  font-size: 25px;
+  color: #6e6d6d;
+  width: 90%;
 }
 .main-ourstorypage-container .ourstory-2 {
   background-color: coral;
