--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
-  width: 80%;
-  height: auto;
+  width:min(80% , 1000px);
+  /*height: auto;*/
   margin-left: auto;
   margin-right: auto;
   padding: 12px 16px;
@@ -15,7 +15,12 @@
   left: 0px;
   position: fixed;
   z-index: 999;
-  box-shadow: 0px 0px 10px 0px rgb(100, 75, 75, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(100, 75, 75, 0.75);
+}
+
+.nav-icon{
+  padding: 0!important;
+  color: black;
 }
 .nav-left-icon {
 }
@@ -47,11 +52,11 @@
   align-items: center;
 }
 .product-button a {
-  font-family: Baby-girly;
   color: #494949;
   padding: 8px;
   font-weight: 800;
-  font-size: 20px;
+  /*font-size: 20px;*/
+  font-size: clamp(15px, 1vw, 20px);
   transition-duration: 0.5s;
 }
 .product-button img {
@@ -59,4 +64,97 @@
 }
 .m-r-10 {
   padding: 0px 40px 0px 0px;
+}
+
+.nav-mobile-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.close-icon{
+  font-size: 40px!important;
+  cursor: pointer;
+  color: #4e4e4e;
+
+}
+.dehaze-icon{
+  font-size: 40px!important;
+  cursor: pointer;
+  color: #4e4e4e;
+
+}
+
+.fade-enter {
+  opacity: 0;
+  /*transform: translateX(-100%);*/
+}
+.fade-enter-active  {
+  opacity: 1;
+  /*transform: translateX(0%);*/
+}
+.fade-exit  {
+  opacity: 1;
+  /*transform: translateX(0%);*/
+}
+.fade-exit-active  {
+  opacity: 0;
+  /*transform: translateX(100%);*/
+}
+.fade-enter-active ,
+.fade-exit-active {
+  transition: opacity 250ms;
+}
+.nav-mobile-container div{
+  display: flex;
+  justify-content: flex-end;
+}
+.list-transition-enter,
+.list-transition-appear {
+  /*We give the list the initial dimension of the list button*/
+  opacity: 0;
+  max-height: 0px;
+
+}
+/* This is where we can add the transition*/
+.list-transition-enter-active,
+.list-transition-appear-active {
+  opacity: 1;
+  max-height: 200px;
+  transition: max-height 500ms,opacity 500ms;
+}
+
+/* This fires as soon as the this.state.showList is false */
+.list-transition-exit {
+  opacity: 1;
+  max-height: 200px;
+}
+/* fires as element leaves the DOM*/
+.list-transition-exit-active {
+  opacity: 0;
+  max-height: 0px;
+  transition: max-height 500ms,opacity 300ms;
+}
+.nav-mobile-items{
+}
+@media (max-width: 600px) {
+  .nav-right-items{
+    flex-direction: column;
+    justify-content: center;
+
+  }
+  .m-r-10 {
+    padding: 5px 0;
+  }
+  .nav-right-items li{
+    border-bottom: 1px solid #e0e0de;
+  }
+  .nav-container div{
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .nav-container{
+    background-color: rgba(255, 255, 255,.95);
+  }
+
 }
