--- a/client/src/screens/HomePage/styles.css
+++ b/client/src/screens/HomePage/styles.css
@@ -9,7 +9,6 @@
   height: 100vh;
   width: 100%;
   background-color: rgb(255, 255, 255);
-
 }
 .landing-header img {
   height: 100%;
@@ -71,7 +70,7 @@
 .landing-ourstory .top-grid .text-right {
   display: flex;
   align-items: center;
-  font-size: clamp(20px, 3vw, 30px);;
+  font-size: clamp(20px, 3vw, 30px);
   color: #a2a97f;
   font-weight: 400;
 }
@@ -205,10 +204,12 @@
 }
 .main-homepage-container .landing-properties {
   position: relative;
+  /* height: max-content; */
 }
-.main-homepage-container .landing-properties .top-container{
+.main-homepage-container .landing-properties .top-container {
   display: flex;
-  padding-top: 50px;
+  /* padding-top: 50px; */
+  padding: 100px 0px;
 }
 .main-homepage-container .landing-properties .left-container {
   display: flex;
@@ -244,30 +245,19 @@
   position: absolute;
   top: 85%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.main-homepage-container
-  .landing-properties
-  .box-content
-  .box-container {
+.main-homepage-container .landing-properties .box-content .box-container {
   position: relative;
   width: clamp(150px, 100%, 180px);
   margin: 10px 20px;
 }
-.main-homepage-container
-  .landing-properties
-  .box-content
-  .box-container
-  > img {
+.main-homepage-container .landing-properties .box-content .box-container > img {
   width: 100%;
   height: 100%;
 }
 
-.main-homepage-container
-  .landing-properties
-  .box-content
-  .box-container
-  > p {
+.main-homepage-container .landing-properties .box-content .box-container > p {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -281,26 +271,23 @@
   line-height: 1.5rem;
 }
 .main-homepage-container
-.landing-properties
-.box-content
-.box-container-mobile {
+  .landing-properties
+  .box-content
+  .box-container-mobile {
   position: relative;
   align-self: center;
   width: 90%;
   margin: 10px 0;
 }
 .main-homepage-container
-.landing-properties
-.box-content
-.box-container-mobile
-> img {
+  .landing-properties
+  .box-content
+  .box-container-mobile
+  > img {
   width: 100%;
   height: 100%;
 }
-.landing-properties
-.box-content
-.box-container-mobile
-> p {
+.landing-properties .box-content .box-container-mobile > p {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -316,11 +303,10 @@
 .main-homepage-container .landing-properties .right-container {
   align-self: center;
   width: 50vw;
-
 }
 .main-homepage-container .landing-properties .right-container > img {
   width: 100%;
-  height: 90vh;
+  /* height: 90vh; */
 }
 .main-homepage-container .landing-pictures {
   display: flex;
@@ -339,12 +325,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
 }
 .main-homepage-container .landing-pictures .imgs-container > img {
   margin: 10px;
   width: clamp(150px, 30%, 350px);
-  height: 350px
+  height: 350px;
 }
 @media (max-width: 600px) {
   /*.landing-header{*/
@@ -352,103 +337,90 @@
   /*  background-size: cover;*/
   /*  background-repeat: no-repeat;*/
   /*}*/
-  .landing-ourstory .bottom-grid .text-right{
-    padding-left: 0px!important;
+  .landing-ourstory .bottom-grid .text-right {
+    padding-left: 0px !important;
   }
-  .landing-ourstory .text-right div{
+  .landing-ourstory .text-right div {
     margin: 20px 10px;
   }
   .landing-ourstory .text-right .circle-container {
-
     width: 80px;
     height: 80px;
     border-radius: 40px;
-
   }
-  .landing-ourstory .bottom-grid{
+  .landing-ourstory .bottom-grid {
     justify-content: flex-start;
     flex-direction: column;
     width: 100vw;
   }
-  .landing-ourstory .bottom-grid .text-right :nth-child(1){
+  .landing-ourstory .bottom-grid .text-right :nth-child(1) {
     text-align: center;
-
   }
-  .landing-ourstory .bottom-grid .text-right :nth-child(2){
+  .landing-ourstory .bottom-grid .text-right :nth-child(2) {
     justify-self: center;
     align-self: center;
-
   }
-  .landing-ourstory .bottom-grid .text-right button{
+  .landing-ourstory .bottom-grid .text-right button {
     align-self: center;
-
   }
-  .image-ourstory{
+  .image-ourstory {
     max-width: 100vw;
     height: 45vh;
   }
-  .landing-product .product-container .product-ingredient{
+  .landing-product .product-container .product-ingredient {
     grid-auto-rows: 150px;
-    margin: 0px 50px!important;
+    margin: 0px 50px !important;
   }
-  .main-homepage-container .landing-properties{
+  .main-homepage-container .landing-properties {
     flex-direction: column;
   }
-  .main-homepage-container .landing-properties .left-container{
+  .main-homepage-container .landing-properties .left-container {
     width: 100vw;
   }
-  .main-homepage-container .landing-properties .right-container{
+  .main-homepage-container .landing-properties .right-container {
     width: 100vw;
     padding: 50px 0;
-
   }
   .main-homepage-container .landing-properties .left-container .text-container {
     width: 80vw;
   }
   .main-homepage-container
-  .landing-properties
-  .left-container
-  .text-container
-  :nth-child(1) {
+    .landing-properties
+    .left-container
+    .text-container
+    :nth-child(1) {
     text-align: center;
   }
-  .main-homepage-container .landing-properties .box-content{
+  .main-homepage-container .landing-properties .box-content {
     flex-direction: column;
   }
   .main-homepage-container
-  .landing-properties
-  .left-container
-  .text-container
-  :nth-child(1) {
+    .landing-properties
+    .left-container
+    .text-container
+    :nth-child(1) {
     margin-bottom: 10px;
   }
-  .main-homepage-container
-  .landing-properties
-  .left-container
-  .text-container
-  {
+  .main-homepage-container .landing-properties .left-container .text-container {
     margin-bottom: 20px;
   }
-
 }
-@media (max-width: 800px) {
-  .landing-ourstory .bottom-grid .text-right :nth-child(2){
+@media (max-width: 1024px) {
+  .landing-ourstory .bottom-grid .text-right :nth-child(2) {
     width: 90%;
-
   }
-  .landing-product .product-container .product-ingredient{
+  .landing-product .product-container .product-ingredient {
     margin-left: 0px;
   }
-  .landing-ourstory .bottom-grid .text-right{
+  .landing-ourstory .bottom-grid .text-right {
     padding-left: 40px;
   }
   .main-homepage-container .landing-properties .right-container > img {
-
-    height: 50vh!important;
+    /* height: 50vh !important; */
   }
-  .main-homepage-container .landing-properties .box-content{
+  .main-homepage-container .landing-properties .box-content {
     position: relative;
-    transform: translate(0%,0%);
+    transform: translate(0%, 0%);
     top: 0;
     left: 0;
   }
@@ -456,7 +428,6 @@
     margin-bottom: 20px;
   }
   .main-homepage-container .landing-pictures .imgs-container > img {
-
     height: clamp(150px, 100%, 330px);
   }
 }
