--- a/client/src/components/CardItem/cardStyles.css
+++ b/client/src/components/CardItem/cardStyles.css
@@ -1,12 +1,18 @@
 .card-container {
   position: relative;
+  -webkit-filter: drop-shadow(0px 25px 25px rgba(0, 0, 0, 0.16));
+  filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  /* box-shadow: 0px 0px 25px 3px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 0px 0px 25px 3px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 0px 25px 3px rgba(0, 0, 0, 0.16); */
 }
 .card-container .card-content {
   position: absolute;
   left: 50%;
   color: #4e4e4e;
   width: 80%;
-  transform: translate(-50%, -45%);
+  /* height: 100%; */
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,7 +20,7 @@
 }
 
 .card-container .card-content > p {
-  height: 100%;
+  /* height: 100%; */
 }
 .card-container .card-content > * {
   padding: 10px 0px;
@@ -27,7 +33,7 @@
   .img-content {
     /*height: max(50%, 650px)!important;*/
   }
-  .product-img{
-    margin-right: 0px!important;
+  .product-img {
+    margin-right: 0px !important;
   }
 }
