--- a/client/src/screens/NewsPage/styles.css
+++ b/client/src/screens/NewsPage/styles.css
@@ -2,11 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: rgb(240, 240, 240);
 }
 .main-newspage-container .news-header {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 .news-header img {
@@ -16,7 +15,7 @@
 .news-header .text-header {
   color: #4e4e4e;
   position: absolute;
-  font-size: 180px;
+  font-size: clamp(50px, 10vw, 180px);
   top: 50%;
   left: 50%;
   display: flex;
@@ -28,28 +27,36 @@
 
 .main-newspage-container .news-container {
   /* background-color: chocolate; */
-  padding: 0 200px;
+  /* padding: 0 200px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  width: 80%;
   position: relative;
 }
 .main-newspage-container .news-container .news-main-container {
-  display: flex;
+  display: grid;
   justify-content: center;
+  width: 100%;
   position: absolute;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 400px;
+  grid-column-gap: clamp(10px, 5vw, 80px);
   top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .main-newspage-container .news-container .news-main-container > * {
-  margin: 0px 30px;
+  /* margin: 0px 30px; */
 }
 .main-newspage-container .news-container .news-latest-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   /* align-items: center; */
-  height: 90vh;
+  /* height: 90vh; */
   /* align-items: center; */
-  background-color: rgb(240, 240, 240);
   /* padding: 300px 200px 150px; */
 }
 
@@ -58,39 +65,42 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  margin-top: 150px;
+  margin-top: 200px;
   /* padding: 0 200px; */
 }
 .news-latest-container .news-latest-item > p {
-  font-size: 52px;
+  font-size: clamp(34px, 3vw, 52px);
   color: #4e4e4e;
   margin-bottom: 30px;
   margin-top: 20px;
 }
 .news-latest-container .news-latest-item > img {
-  width: 75vw;
-  height: 450px;
+  -webkit-filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  /* width: 75vw; */
+  height: 100%;
 }
 .news-latest-container .news-latest-item .new-lastest-content {
   position: absolute;
-  top: 60%;
+  top: 58%;
   left: 50%;
+  width: 90%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .news-latest-container .news-latest-item .new-lastest-content > img {
-  width: 22vw;
-  height: 35vh;
+  width: 70%;
+  height: 400px;
   margin-right: 50px;
 }
 .news-latest-container .news-latest-item .new-lastest-content p {
   padding: 20px 0px;
-  width: 42vw;
+  width: 100%;
 }
 .new-lastest-content .description .text-header {
-  font-size: 30px;
+  font-size: clamp(14px, 3vw, 30px);
   color: #4e4e4e;
 }
 .new-lastest-content .description .text-desc {
@@ -105,15 +115,21 @@
   flex-direction: column;
 }
 .news-recommended-container > p {
-  font-size: 52px;
+  font-size: clamp(34px, 3vw, 52px);
   color: #4e4e4e;
   margin-bottom: 10px;
   margin-top: 20px;
 }
 .news-recommended-container .list-news-reccommended {
-  display: flex;
-  justify-content: flex-start;
-  justify-content: space-between;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 500px;
+  grid-column-gap: clamp(25px, 5vw, 50px);
+  grid-row-gap: 40px;
+
+  /* justify-content: flex-start; */
+  /* justify-content: space-between; */
   margin: 20px 0px;
   /* padding: 0px 50px; */
 }
@@ -133,3 +149,63 @@
 .news-latest-container .news-latest-item .new-lastest-content p {
   width: 50%;
 } */
+
+@media (max-width: 1024px) {
+  .news-latest-container .news-latest-item {
+    margin-top: 150px;
+  }
+  .main-newspage-container .news-container .news-main-container {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 300px;
+  }
+  .news-latest-container .news-latest-item .new-lastest-content {
+    flex-direction: column;
+  }
+  .news-latest-container .news-latest-item .new-lastest-content > img {
+    margin-right: 0px;
+    width: 80%;
+    height: 300px;
+  }
+  .news-recommended-container .list-news-reccommended {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 300px;
+    grid-column-gap: clamp(25px, 5vw, 50px);
+    grid-row-gap: 20px;
+
+    /* justify-content: flex-start; */
+    /* justify-content: space-between; */
+    margin: 20px 0px;
+    /* padding: 0px 50px; */
+  }
+}
+@media (max-width: 600px) {
+  .main-newspage-container .news-container .news-main-container {
+    grid-auto-rows: 200px;
+  }
+  .news-latest-container .news-latest-item {
+    margin-top: 100px;
+  }
+  .news-latest-container .news-latest-item .new-lastest-content {
+    padding-top: 50px;
+  }
+  .news-latest-container .news-latest-item > img {
+    /* width: 75vw; */
+    height: 300px;
+  }
+  .news-latest-container .news-latest-item .new-lastest-content > img {
+    margin-right: 0px;
+    width: 80%;
+    height: 150px;
+  }
+  .news-recommended-container .list-news-reccommended {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 200px;
+    grid-column-gap: clamp(25px, 5vw, 50px);
+    grid-row-gap: 10px;
+
+    /* justify-content: flex-start; */
+    /* justify-content: space-between; */
+    margin: 20px 0px;
+    /* padding: 0px 50px; */
+  }
+}
