--- a/client/src/screens/StorePage/styles.css
+++ b/client/src/screens/StorePage/styles.css
@@ -2,12 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: auto;
-  background-color: rgb(240, 240, 240);
 }
 .main-storepage-container .store-header {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 .store-header img {
@@ -15,9 +13,9 @@
   height: 100%;
 }
 .store-header .text-header {
-  color: #4e4e4e;
+  color: #fff;
   position: absolute;
-  font-size: 180px;
+  font-size: clamp(50px, 10vw, 180px);
   top: 50%;
   left: 50%;
   display: flex;
@@ -29,7 +27,11 @@
 
 .main-storepage-container .store-container {
   /* background-color: chocolate; */
-  padding: 0 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  width: 80%;
   position: relative;
 }
 .main-storepage-container .store-container .store-main-container {
@@ -49,8 +51,6 @@
   flex-direction: column;
   /* align-items: center; */
   /* align-items: center; */
-  margin: 50px 0px;
-  background-color: rgb(240, 240, 240);
   /* padding: 300px 200px 150px; */
 }
 
@@ -62,35 +62,38 @@
   /* padding: 0 200px; */
 }
 .store-latest-container .store-latest-item > p {
-  font-size: 52px;
+  font-size: clamp(34px, 3vw, 52px);
   color: #4e4e4e;
   margin-bottom: 30px;
   margin-top: 20px;
 }
 .store-latest-container .store-latest-item > img {
-  width: 75vw;
-  height: 450px;
+  /* width: 75vw; */
+  -webkit-filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  height: 100%;
 }
 .store-latest-container .store-latest-item .store-lastest-content {
   position: absolute;
-  top: 60%;
+  top: 58%;
   left: 50%;
+  width: 90%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .store-latest-container .store-latest-item .store-lastest-content > img {
-  width: 22vw;
-  height: 35vh;
+  width: 70%;
+  height: 400px;
   margin-right: 50px;
 }
 .store-latest-container .store-latest-item .store-lastest-content p {
   padding: 20px 0px;
-  width: 42vw;
+  width: 100%;
 }
 .store-lastest-content .description .text-header {
-  font-size: 30px;
+  font-size: clamp(14px, 3vw, 30px);
   color: #4e4e4e;
 }
 .store-lastest-content .description .text-desc {
@@ -105,15 +108,57 @@
   flex-direction: column;
 }
 .store-recommended-container > p {
-  font-size: 52px;
+  font-size: clamp(34px, 3vw, 52px);
   color: #4e4e4e;
   margin-bottom: 10px;
   margin-top: 20px;
 }
 .store-recommended-container .list-store-reccommended {
-  display: flex;
-  justify-content: flex-start;
-  justify-content: space-between;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 500px;
+  grid-column-gap: clamp(25px, 5vw, 50px);
+  grid-row-gap: 40px;
+
+  /* justify-content: flex-start; */
+  /* justify-content: space-between; */
   margin: 20px 0px;
   /* padding: 0px 50px; */
+}
+@media (max-width: 1024px) {
+  .store-latest-container .store-latest-item .store-lastest-content {
+    flex-direction: column;
+  }
+  .store-latest-container .store-latest-item .store-lastest-content > img {
+    margin-right: 0px;
+    width: 80%;
+    height: 300px;
+  }
+  .store-recommended-container .list-store-reccommended {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 300px;
+    grid-column-gap: clamp(25px, 5vw, 50px);
+    grid-row-gap: 20px;
+
+    /* justify-content: flex-start; */
+    /* justify-content: space-between; */
+    margin: 20px 0px;
+  }
+}
+@media (max-width: 600px) {
+  .store-latest-container .store-latest-item .store-lastest-content {
+    padding-top: 50px;
+  }
+  .store-latest-container .store-latest-item .store-lastest-content > img {
+    margin-right: 0px;
+    width: 80%;
+    height: 150px;
+  }
+  .store-latest-container .store-latest-item > img {
+    height: 300px;
+  }
+  .store-recommended-container .list-store-reccommended {
+    grid-auto-rows: 200px;
+  }
 }
