--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
-  width:min(80% , 1000px);
+  width: min(80%, 1000px);
   /*height: auto;*/
   margin-left: auto;
   margin-right: auto;
@@ -18,8 +18,8 @@
   box-shadow: 0px 0px 10px 0px rgba(100, 75, 75, 0.75);
 }
 
-.nav-icon{
-  padding: 0!important;
+.nav-icon {
+  padding: 0 !important;
   color: black;
 }
 .nav-left-icon {
@@ -34,7 +34,7 @@
   transform: scale(1.1, 1.1);
   transition-duration: 1s;
 }
-.product-button:hover a {
+.product-button:hover {
   cursor: pointer;
   color: #000;
   transform: scale(1.1, 1.1);
@@ -51,7 +51,7 @@
   justify-content: center;
   align-items: center;
 }
-.product-button a {
+.product-button {
   color: #494949;
   padding: 8px;
   font-weight: 800;
@@ -66,45 +66,43 @@
   padding: 0px 40px 0px 0px;
 }
 
-.nav-mobile-container{
+.nav-mobile-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.close-icon{
-  font-size: 40px!important;
+.close-icon {
+  font-size: 40px !important;
   cursor: pointer;
   color: #4e4e4e;
-
 }
-.dehaze-icon{
-  font-size: 40px!important;
+.dehaze-icon {
+  font-size: 40px !important;
   cursor: pointer;
   color: #4e4e4e;
-
 }
 
 .fade-enter {
   opacity: 0;
   /*transform: translateX(-100%);*/
 }
-.fade-enter-active  {
+.fade-enter-active {
   opacity: 1;
   /*transform: translateX(0%);*/
 }
-.fade-exit  {
+.fade-exit {
   opacity: 1;
   /*transform: translateX(0%);*/
 }
-.fade-exit-active  {
+.fade-exit-active {
   opacity: 0;
   /*transform: translateX(100%);*/
 }
-.fade-enter-active ,
+.fade-enter-active,
 .fade-exit-active {
   transition: opacity 250ms;
 }
-.nav-mobile-container div{
+.nav-mobile-container div {
   display: flex;
   justify-content: flex-end;
 }
@@ -113,14 +111,13 @@
   /*We give the list the initial dimension of the list button*/
   opacity: 0;
   max-height: 0px;
-
 }
 /* This is where we can add the transition*/
 .list-transition-enter-active,
 .list-transition-appear-active {
   opacity: 1;
   max-height: 200px;
-  transition: max-height 500ms,opacity 500ms;
+  transition: max-height 500ms, opacity 500ms;
 }
 
 /* This fires as soon as the this.state.showList is false */
@@ -132,29 +129,27 @@
 .list-transition-exit-active {
   opacity: 0;
   max-height: 0px;
-  transition: max-height 500ms,opacity 300ms;
+  transition: max-height 500ms, opacity 300ms;
 }
-.nav-mobile-items{
+.nav-mobile-items {
 }
 @media (max-width: 600px) {
-  .nav-right-items{
+  .nav-right-items {
     flex-direction: column;
     justify-content: center;
-
   }
   .m-r-10 {
     padding: 5px 0;
   }
-  .nav-right-items li{
+  .nav-right-items li {
     border-bottom: 1px solid #e0e0de;
   }
-  .nav-container div{
+  .nav-container div {
     width: 100%;
     height: 100%;
     position: relative;
   }
-  .nav-container{
-    background-color: rgba(255, 255, 255,.95);
+  .nav-container {
+    background-color: rgba(255, 255, 255, 0.95);
   }
-
 }
