--- a/client/src/screens/HomePage/styles.css
+++ b/client/src/screens/HomePage/styles.css
@@ -332,6 +332,9 @@
   height: 350px;
 }
 @media (max-width: 600px) {
+  .main-homepage-container .landing-header {
+    height: 100% !important;
+  }
   /*.landing-header{*/
   /*  background-image: url(../../images/landing_page_01_mobile.png);*/
   /*  background-size: cover;*/
@@ -406,6 +409,9 @@
   }
 }
 @media (max-width: 1024px) {
+  .main-homepage-container .landing-header {
+    height: 55vh;
+  }
   .landing-ourstory .bottom-grid .text-right :nth-child(2) {
     width: 90%;
   }
