--- a/client/src/screens/StorePage/styles.css
+++ b/client/src/screens/StorePage/styles.css
@@ -5,7 +5,7 @@
 }
 .main-storepage-container .store-header {
   position: relative;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 .store-header img {
@@ -126,6 +126,9 @@
   /* padding: 0px 50px; */
 }
 @media (max-width: 1024px) {
+  .main-storepage-container .store-header {
+    height: 100%;
+  }
   .store-latest-container .store-latest-item .store-lastest-content {
     flex-direction: column;
   }
