FIX landding header height

--- a/client/src/screens/HomePage/styles.css
+++ b/client/src/screens/HomePage/styles.css
@@ -410,7 +410,7 @@
 }
 @media (max-width: 1024px) {
   .main-homepage-container .landing-header {
-    height: 55vh;
+    height: 50%;
   }
   .landing-ourstory .bottom-grid .text-right :nth-child(2) {
     width: 90%;
