--- a/client/src/screens/NewsPage/styles.css
+++ b/client/src/screens/NewsPage/styles.css
@@ -74,29 +74,44 @@
   margin-bottom: 30px;
   margin-top: 20px;
 }
-.news-latest-container .news-latest-item > img {
+.news-latest-container .news-latest-item .items-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.news-latest-container .news-latest-item .items-container > img {
   -webkit-filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
   filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
   /* width: 75vw; */
+  width: 100%;
   height: 100%;
 }
 .news-latest-container .news-latest-item .new-lastest-content {
   position: absolute;
-  top: 58%;
+  top: 50%;
   left: 50%;
   width: 90%;
+  height: 100%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.news-latest-container .news-latest-item .new-lastest-content > img {
-  width: 70%;
-  height: 400px;
+.news-latest-container
+  .news-latest-item
+  .items-container
+  .new-lastest-content
+  > img {
+  width: 100%;
+  height: 80%;
+  /* height: 400px; */
   margin-right: 50px;
 }
 .news-latest-container .news-latest-item .new-lastest-content p {
   padding: 20px 0px;
+  /* width: 100%; */
+}
+.new-lastest-content .description {
   width: 100%;
 }
 .new-lastest-content .description .text-header {
@@ -104,7 +119,7 @@
   color: #4e4e4e;
 }
 .new-lastest-content .description .text-desc {
-  font-size: 20px;
+  font-size: clamp(10px, 1.5vw, 18px);
   color: #6e6d6d;
 }
 .news-recommended-container {
@@ -163,11 +178,20 @@
   }
   .news-latest-container .news-latest-item .new-lastest-content {
     flex-direction: column;
-  }
-  .news-latest-container .news-latest-item .new-lastest-content > img {
-    margin-right: 0px;
-    width: 80%;
     height: 300px;
+  }
+  .news-latest-container .news-latest-item .items-container {
+    height: 400px;
+    text-align: center;
+  }
+  .news-latest-container
+    .news-latest-item
+    .items-container
+    .new-lastest-content
+    > img {
+    margin-right: 0px;
+    width: 60%;
+    height: 250px;
   }
   .news-recommended-container .list-news-reccommended {
     grid-template-columns: 1fr 1fr;
@@ -189,16 +213,23 @@
     margin-top: 100px;
   }
   .news-latest-container .news-latest-item .new-lastest-content {
-    padding-top: 50px;
+    /* padding-top: 50px; */
   }
-  .news-latest-container .news-latest-item > img {
+  .news-latest-container .news-latest-item .items-container > img {
     /* width: 75vw; */
-    height: 300px;
+    height: 400px;
   }
-  .news-latest-container .news-latest-item .new-lastest-content > img {
+  .news-latest-container .news-latest-item .items-container {
+    height: 100%;
+  }
+  .news-latest-container
+    .news-latest-item
+    .items-container
+    .new-lastest-content
+    > img {
     margin-right: 0px;
     width: 80%;
-    height: 150px;
+    height: 250px;
   }
   .news-recommended-container .list-news-reccommended {
     grid-template-columns: 1fr 1fr;
