--- a/client/src/screens/StorePage/styles.css
+++ b/client/src/screens/StorePage/styles.css
@@ -26,7 +26,6 @@
 }
 
 .main-storepage-container .store-container {
-  /* background-color: chocolate; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,17 +48,17 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* align-items: center; */
-  /* align-items: center; */
-  /* padding: 300px 200px 150px; */
 }
 
 .store-latest-container .store-latest-item {
   position: relative;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* padding: 0 200px; */
+}
+.store-latest-container .store-latest-item .items-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 .store-latest-container .store-latest-item > p {
   font-size: clamp(34px, 3vw, 52px);
@@ -67,28 +66,36 @@
   margin-bottom: 30px;
   margin-top: 20px;
 }
-.store-latest-container .store-latest-item > img {
-  /* width: 75vw; */
+.store-latest-container .store-latest-item .items-container > img {
   -webkit-filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
   filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.16));
+  width: 100%;
   height: 100%;
 }
 .store-latest-container .store-latest-item .store-lastest-content {
   position: absolute;
-  top: 58%;
+  top: 50%;
   left: 50%;
   width: 90%;
+  height: 100%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.store-latest-container .store-latest-item .store-lastest-content > img {
-  height: 400px;
+.store-latest-container
+  .store-latest-item
+  .items-container
+  .store-lastest-content
+  > img {
+  width: 100%;
+  height: 80%;
   margin-right: 50px;
 }
 .store-latest-container .store-latest-item .store-lastest-content p {
   padding: 20px 0px;
+}
+.store-lastest-content .description {
   width: 100%;
 }
 .store-lastest-content .description .text-header {
@@ -96,14 +103,12 @@
   color: #4e4e4e;
 }
 .store-lastest-content .description .text-desc {
-  font-size: 20px;
+  font-size: clamp(10px, 1.5vw, 18px);
   color: #6e6d6d;
 }
 .store-recommended-container {
   height: auto;
   display: flex;
-  /* padding: 0px 200px; */
-  /* flex-wrap: wrap; */
   flex-direction: column;
 }
 .store-recommended-container > p {
@@ -119,11 +124,7 @@
   grid-auto-rows: 500px;
   grid-column-gap: clamp(25px, 5vw, 50px);
   grid-row-gap: 40px;
-
-  /* justify-content: flex-start; */
-  /* justify-content: space-between; */
   margin: 20px 0px;
-  /* padding: 0px 50px; */
 }
 @media (max-width: 1024px) {
   .main-storepage-container .store-header {
@@ -131,20 +132,26 @@
   }
   .store-latest-container .store-latest-item .store-lastest-content {
     flex-direction: column;
-  }
-  .store-latest-container .store-latest-item .store-lastest-content > img {
-    margin-right: 0px;
-    width: 80%;
     height: 300px;
+  }
+  .store-latest-container .store-latest-item .items-container {
+    height: 400px;
+    text-align: center;
+  }
+  .store-latest-container
+    .store-latest-item
+    .items-container
+    .store-lastest-content
+    > img {
+    margin-right: 0px;
+    width: 60%;
+    height: 250px;
   }
   .store-recommended-container .list-store-reccommended {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 300px;
     grid-column-gap: clamp(25px, 5vw, 50px);
     grid-row-gap: 20px;
-
-    /* justify-content: flex-start; */
-    /* justify-content: space-between; */
     margin: 20px 0px;
   }
 }
@@ -157,8 +164,20 @@
     width: 80%;
     height: 150px;
   }
-  .store-latest-container .store-latest-item > img {
-    height: 300px;
+  .store-latest-container .store-latest-item .items-container > img {
+    height: 400px;
+  }
+  .store-latest-container .store-latest-item {
+    height: 100%;
+  }
+  .store-latest-container
+    .store-latest-item
+    .items-container
+    .store-lastest-content
+    > img {
+    margin-right: 0px;
+    width: 80%;
+    height: 250px;
   }
   .store-recommended-container .list-store-reccommended {
     grid-auto-rows: 200px;
