--- a/client/src/app.css
+++ b/client/src/app.css
@@ -10,6 +10,10 @@
   margin: 0;
   font-family: Baby-girly;
 }
+p,ul{
+  margin: 0!important;
+  font-family: Baby-girly;
+}
 .App {
   display: flex;
   height: 100vh;
